[gd_scene load_steps=28 format=2]

[ext_resource path="res://Assets/Audio/SoundEffects/QuickBlow.wav" type="AudioStream" id=1]
[ext_resource path="res://Assets/Others/light.png" type="Texture" id=2]
[ext_resource path="res://Assets/Others/ExplosiveCrate/1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Audio/SoundEffects/WoodHit.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Others/Explode/frame_16_delay-0.01s.png" type="Texture" id=5]
[ext_resource path="res://Assets/Others/Explode/frame_15_delay-0.01s.png" type="Texture" id=6]
[ext_resource path="res://Assets/Others/ExplosiveCrate/Crater.png" type="Texture" id=7]
[ext_resource path="res://Assets/Others/Explode/frame_12_delay-0.01s.png" type="Texture" id=9]
[ext_resource path="res://Assets/Others/ExplosiveCrate/Sign.png" type="Texture" id=10]
[ext_resource path="res://Assets/Others/Explode/frame_09_delay-0.01s.png" type="Texture" id=12]
[ext_resource path="res://Assets/Others/Explode/frame_13_delay-0.01s.png" type="Texture" id=13]
[ext_resource path="res://Assets/Others/Explode/frame_14_delay-0.01s.png" type="Texture" id=14]
[ext_resource path="res://Assets/Others/Explode/frame_08_delay-0.01s.png" type="Texture" id=15]
[ext_resource path="res://Assets/Others/ExplosiveCrate/5.png" type="Texture" id=16]
[ext_resource path="res://Assets/Others/ExplosiveCrate/4.png" type="Texture" id=18]
[ext_resource path="res://Assets/Others/Explode/frame_11_delay-0.01s.png" type="Texture" id=19]
[ext_resource path="res://Assets/Others/ExplosiveCrate/2.png" type="Texture" id=20]
[ext_resource path="res://Assets/Others/ExplosiveCrate/3.png" type="Texture" id=21]
[ext_resource path="res://Assets/Others/Explode/frame_07_delay-0.01s.png" type="Texture" id=22]
[ext_resource path="res://Assets/Others/Explode/frame_10_delay-0.01s.png" type="Texture" id=23]
[ext_resource path="res://ExplodingCrates.gd" type="Script" id=24]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 18 ), ExtResource( 16 ) ],
"loop": true,
"name": "Warning",
"speed": 12.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 23 ), ExtResource( 19 ), ExtResource( 9 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "Explode",
"speed": 12.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Crater",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 52, 49 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 47, 43 )

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( -51, -48, 52, -48, 53, 49, -51, 49 )

[sub_resource type="Animation" id=6]
resource_name = "Fadeout"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("FadeOutLight/FadeLight:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 4.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 208.06

[node name="ExplodingCrates" type="KinematicBody2D"]
script = ExtResource( 24 )

[node name="CrateAnSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3.25, 3.09375 )
frames = SubResource( 2 )
animation = "Idle"
playing = true

[node name="CrateSprite" type="Sprite" parent="."]
position = Vector2( 5.72205e-06, -1 )
scale = Vector2( 0.1175, 0.1425 )
texture = ExtResource( 10 )

[node name="CrateWall" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="CrateHitbox" type="Area2D" parent="."]

[node name="ExplosionRange" type="CollisionShape2D" parent="CrateHitbox"]
position = Vector2( 1, 1 )
shape = SubResource( 8 )

[node name="ExplosionTime" type="Timer" parent="."]
wait_time = 0.1

[node name="ExplodingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
volume_db = 3.586

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( 0, -2 )
scale = Vector2( 3.82153, 2.90747 )
texture = ExtResource( 2 )
color = Color( 0.882353, 0.854902, 0.14902, 1 )

[node name="CrateHitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 5.379

[node name="Shadow" type="LightOccluder2D" parent="."]
occluder = SubResource( 5 )

[node name="FadeOutLight" type="AnimationPlayer" parent="."]
anims/Fadeout = SubResource( 6 )

[node name="FadeLight" type="Light2D" parent="FadeOutLight"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -2 )
scale = Vector2( 3.82153, 2.90747 )
texture = ExtResource( 2 )
color = Color( 0.882353, 0.854902, 0.14902, 1 )

[node name="Radius" type="Area2D" parent="."]

[node name="ExplosionRadius" type="CollisionShape2D" parent="Radius"]
shape = SubResource( 7 )
disabled = true

[connection signal="body_entered" from="CrateHitbox" to="." method="_on_CrateHitbox_body_entered"]
[connection signal="timeout" from="ExplosionTime" to="." method="_on_ExplosionTime_timeout"]
[connection signal="body_entered" from="Radius" to="." method="_on_Radius_body_entered"]
